assets/css/style.css
/* ... */
.section-title {
  padding-bottom: 30px;
}

.section-title h2 {
  font-size: 32px;
  font-weight: bold;
  margin-bottom: 15px;
  padding-bottom: 15px;
  position: relative;
  color: #345676;
}

.section-title h2::after {
  content: '';
  position: absolute;
  display: block;
  width: 50px;
  height: 3px;
  background: #297c78;
  bottom: 0;
  left: 0;
}

.section-title p {
  margin-bottom: 0;
}

/*--------------------------------------------------------------
# Breadcrumbs
--------------------------------------------------------------*/
.breadcrumbs {
  padding: 15px 0;
  background-color: #fcf2f7;
  min-height: 40px;
}

.breadcrumbs h2 {
  font-size: 24px;
  font-weight: 300;
}

.breadcrumbs ol {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  padding: 0;
  margin: 0;
  font-size: 14px;
}

.breadcrumbs ol li + li {
  padding-left: 10px;
}

.breadcrumbs ol li + li::before {
  display: inline-block;
  padding-right: 10px;
  color: #6c757d;
  content: "/";
}

@media (max-width: 768px) {
  .breadcrumbs .d-flex {
    display: block !important;
  }
  .breadcrumbs ol {
    display: block;
  }
  .breadcrumbs ol li {
    display: inline-block;
  }
}

/*--------------------------------------------------------------
# About
--------------------------------------------------------------*/
.about .content {
  padding: 30px 0;
}

.about .content h3 {
  font-weight: 500;
  font-size: 34px;
  color: #2c4964;
}

.about .content p {
  margin-bottom: 0;
}

.about .content .count-box {
  padding: 20px 0;
  width: 100%;
}

.about .content .count-box i {
  display: block;
  font-size: 36px;
  color: #afd2ee;
  float: left;
  line-height: 0;
}

.about .content .count-box span {
  font-size: 36px;
  line-height: 20px;
  display: block;
  font-weight: 700;
  color: #2c4964;
  margin-left: 50px;
  font-family: sans-serif;
}

.about .content .count-box p {
  padding: 15px 0 0 0;
  margin: 0 0 0 50px;
  font-family: sans-serif;
  font-size: 14px;
  color: #437099;
}

.about .content .count-box a {
  font-weight: 600;
  display: block;
  margin-top: 20px;
  color: #437099;
  font-size: 15px;
  font-family: "Poppins", sans-serif;
  transition: ease-in-out 0.3s;
}

.about .content .count-box a:hover {
  color: #6b96be;
}

.about .image {
  background:url("../img/profile.jpg") center center no-repeat;
  background-size: cover;
  min-height: 900px;
}

@media (max-width: 991px) {
  .about .image {
    text-align: center;
  }
  .about .image img {
    max-width: 80%;
  }
}

@media (max-width: 667px) {
  .about .image img {
    max-width: 100%;
  }
}

/*--------------------------------------------------------------
# Skills
--------------------------------------------------------------*/
.skills .progress {
  height: 50px;
  display: block;
  background: none;
}

.skills .progress .skill {
  padding: 10px 0;
  margin: 0 0 6px 0;
  text-transform: uppercase;
  display: block;
  font-weight: 600;
  font-family: "Poppins", sans-serif;
  color: #2c4964;
}

.skills .progress .skill .val {
  float: right;
  font-style: normal;
}

.skills .progress-bar-wrap {
  background: #dbdfde;
}

.skills .progress-bar {
  width: 1px;
  height: 10px;
  transition: .9s;
  background-color: #95b1ae;
}

/*--------------------------------------------------------------
# Resume
--------------------------------------------------------------*/
.resume .resume-title {
  font-size: 26px;
  font-weight: 500;
  margin-top: 20px;
  margin-bottom: 20px;
  color: #4b7dab;
  font-family: "Poppins", sans-serif;
}

.resume .resume-item {
  padding: 0 0 20px 20px;
  margin-top: -2px;
  border-left: 2px solid #297c78;
  position: relative;
}

.resume .resume-item h4 {
  line-height: 18px;
  font-size: 18px;
  font-weight: 600;
  color: #2c4964;
  margin-bottom: 10px;
}

.resume .resume-item h5 {
  font-size: 16px;
  background: #e4ebf3;
  padding: 5px 15px;
  display: inline-block;
  font-weight: 400;
  margin-bottom: 10px;
  font-family: "Poppins", sans-serif;
}

.resume .resume-item ul {
  padding-left: 20px;
}

.resume .resume-item ul li {
  padding-bottom: 10px;
}

.resume .resume-item:last-child {
  padding-bottom: 0;
}

.resume .resume-item::before {
  content: "";
  position: absolute;
  width: 16px;
  height: 16px;
  border-radius: 50px;
  left: -9px;
  top: 0;
  background: #fff;
  border: 2px solid #297c78;
}

/*--------------------------------------------------------------
# Services
--------------------------------------------------------------*/
.services .icon-box {
  padding: 20px 15px;
  position: relative;
  overflow: hidden;
  background: #fff;
  box-shadow: 0 0 29px 0 rgba(68, 88, 144, 0.2);
  transition: all 0.3s ease-in-out;
  border-radius: 8px;
  text-align: center;
  z-index: 1;
}

.services .icon-box::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 0;
  transition: ease-in-out 0.3s;
  z-index: -1;
}

.services .icon-box:hover::before {
  background: #297c78;
  height: 100%;
  border-radius: 0px;
}

.services .icon {
  margin: 0 auto 30px auto;
  padding-top: 10px;
  display: inline-block;
  text-align: center;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  background: #297c78;
  transition: all 0.3s ease-in-out;
}

.services .icon i {
  font-size: 36px;
  line-height: 1;
  color: #fff;
}

.services .title {
  font-weight: 700;
  margin-bottom: 15px;
  font-size: 18px;
}

.services .title a {
  color: #111;
}

.services .description {
  font-size: 15px;
  line-height: 24px;
  margin-bottom: 0;
}

.services .icon-box:hover .title a, .services .icon-box:hover .description {
  color: #fff;
}

.services .icon-box:hover .icon {
  background: #fff;
}

.services .icon-box:hover .icon i {
  color: #297c78;
}

@media (max-width: 768px) {
  .services .icon-box::before {
    bottom: 60%;
  }
}

/*--------------------------------------------------------------
# Portfolio
--------------------------------------------------------------*/
.portfolio .portfolio-item {
  margin-bottom: 30px;
}
/* ... */

